--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,8 @@
         // var main = "http://192.168.1.170:8080/f/yk/workGo/";
         var main = "http://192.168.1.170:8080/f/yk/workGo/";
 
-        const appId = "wk2644313361074176";
-        const secretKey = "/B36v3OIEQjDs0x3K2AvCg5WSgFqv4GAUoaNI91i/Pg=";
-        window.workgo.getAuth(appId, secretKey, function(result) {
-            if (result.success) {
-              alert("授权成功")
-            }else {
-              alert(result.errMsg)
-            }
-        })
+        var appId = "wk2644313361074176";
+        var secretKey = "/B36v3OIEQjDs0x3K2AvCg5WSgFqv4GAUoaNI91i/Pg=";
     </script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
